fixed nav styling bugs, adjusted 3 col on mobile

--- a/app/styles/modules/_email-signup.css
+++ b/app/styles/modules/_email-signup.css
@@ -40,7 +40,7 @@
     }
 
     &--emailform-wrapper {
-        margin: 0;
+
         text-align: center;
 
 
@@ -54,7 +54,6 @@ input[type="email"] {
     border-bottom-left-radius: 31px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    display: inline-block;
     text-align: center;
     height: 45px;
     width: 55%;
@@ -78,6 +77,7 @@ input[type=submit] {
     border-top-right-radius: 31px;
     border-bottom-right-radius: 31px;
     width: 35%;
+ 
     font-size: 1.125rem;
     border: 1px solid rgb(229, 233, 236);
     height: 45px;
