--- a/app/styles/modules/_service-cols.css
+++ b/app/styles/modules/_service-cols.css
@@ -62,8 +62,6 @@
 
         @mixin atLarge {
             margin-bottom: 80px;
-
-
             h1 {
 
                 font-size: 3rem;
@@ -96,7 +94,7 @@
 
         img {
             width: 100%;
-            height: 200px;
+            height: 250px;
             @mixin atSmall {
                 width: 400px;
                 height: 200px;
@@ -117,18 +115,21 @@
 
     &--textWrapper {
         text-align: center;
-        padding: 10px 0px;
+        padding: 0px 0px;
         font-weight: 300;
+        margin-bottom: 50px;
 
 
 
         h1 {
+            margin-top: 10px;
             font-size: 1.5rem;
             color: $green;
             font-weight: 300;
         }
         p {
             color: $reg;
+            margin: 0;
             font-size: .875rem;
             line-height: 150%;
 
