--- a/app/styles/modules/_site-header.css
+++ b/app/styles/modules/_site-header.css
@@ -2,42 +2,53 @@
     position: relative;
     top: 22px;
     width: 100%;
-    height: 50px;
+    height: 60px;
     
 
     @mixin atMedium{
         height: 87px;
     }
-
+    
+    @mixin atLarge{
+/*        height: 95px;*/
+    }
 
 
     &__btn-container {
         display: inline-block;
         float: right;
         margin-left: 30px;
+        position: relative;
+        top: 3px;
       
     }
 
 
     &--logo {
         position: absolute;
-        margin: 0 auto;
-        top: -12px;
-        left: 0;
+        top: -8px;
+        left: 20px;
         right: 0;
+        padding: 5px;
         height: 33px;
 
+        @mixin atSmall {
+            padding: 5px;
+        }
+        
+        
         @mixin atMedium {
             position: static;
-       
-            
+            height: 40px;
+        
 
         }
         
         @mixin atLarge{
             display: inline;
             height: 40px;
-            width: 200px
+            width: 200px;
+            padding: 0;
         }
     }
 
@@ -47,7 +58,7 @@
         border: 2px black solid;
         position: absolute;
         right:0;
-        bottom: 33px;
+        bottom: 40px;
         margin-right: 20px;
         
         @mixin atMedium{
